[package]
name = "informalsystems-malachitebft-example-channel"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.75"
publish = false

[dependencies]
async-trait = "0.1.88"
bytes = { version = "1", default-features = false }
color-eyre = "0.6"
config = { version = "0.15.11", features = ["toml"], default-features = false }
derive-where = "1.2.7"
eyre = "0.6"
itertools = "0.14"
prost = "0.13"
rand = { version = "0.8.5", features = ["std_rng"] }
redb = "2.4.0"
serde = "1.0"
serde_json = "1.0"
sha3 = "0.10"
thiserror = { version = "2.0", default-features = false }
tokio = "1.44.1"
toml = "0.8.19"
tracing = "0.1.41"

[dependencies.malachitebft-app-channel]
version = "0.0.1"
# This adds the `informalsystems-malachitebft-app-channel` as a dependency, but exposes it
# under `malachitebft_app_channel` instead of its full package name.
git = "https://git@github.com/informalsystems/malachite.git"
package = "informalsystems-malachitebft-app-channel"

[dependencies.malachitebft-proto]
version = "0.0.1"
git = "https://git@github.com/informalsystems/malachite.git"
package = "informalsystems-malachitebft-proto"

[dependencies.malachitebft-test]
version = "0.0.1"
git = "https://git@github.com/informalsystems/malachite.git"
package = "informalsystems-malachitebft-test"

[dependencies.malachitebft-test-cli]
version = "0.0.1"
git = "https://git@github.com/informalsystems/malachite.git"
package = "informalsystems-malachitebft-test-cli"

[lints]
clippy = { all = "warn", pedantic = "warn" }
rust = { unsafe_code = "deny" }
